// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the /v1/authentication/login path should not login user, because password is missing 1`] = `
Object {
  "code": 400,
  "message": "RequestValidationError(400): \\"password\\" is required",
  "messages": Array [
    "RequestValidationError(400): \\"password\\" is required",
  ],
  "name": "RequestValidationError",
}
`;

exports[`Test the /v1/authentication/login path should not login user, because password is wrong 1`] = `"Password is wrong"`;

exports[`Test the /v1/authentication/login path should not login user, because password too short 1`] = `
Object {
  "code": 400,
  "message": "RequestValidationError(400): \\"password\\" length must be at least 6 characters long",
  "messages": Array [
    "RequestValidationError(400): \\"password\\" length must be at least 6 characters long",
  ],
  "name": "RequestValidationError",
}
`;

exports[`Test the /v1/authentication/login path should not login user, because username is missing 1`] = `
Object {
  "code": 400,
  "message": "RequestValidationError(400): \\"username\\" is required",
  "messages": Array [
    "RequestValidationError(400): \\"username\\" is required",
  ],
  "name": "RequestValidationError",
}
`;

exports[`Test the /v1/authentication/login path should not login user, because username too short 1`] = `
Object {
  "code": 400,
  "message": "RequestValidationError(400): \\"username\\" is required",
  "messages": Array [
    "RequestValidationError(400): \\"username\\" is required",
  ],
  "name": "RequestValidationError",
}
`;
